--- a/jsnack2/index.html
+++ b/jsnack2/index.html
@@ -10,7 +10,7 @@
          <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
          
          <!-- link al css -->
-        <link rel="stylesheet" href="style/style.css">
+        <link rel="stylesheet" href="style.css">
 
         <!-- FONT AWESOME 6.4.0 -->
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -20,7 +20,12 @@
     </head>
 
     <body>
-        
+        <main>
+            <h1 class="text-center mb-3">Are you invited?</h1>
+            <label for="exampleFormControlInput1">Write here your name</label>
+            <input class="form-control mb-3" type="text" placeholder="Name">
+            <button type="submit" class="btn btn-primary">Check</button>
+        </main>
         <!-- JS  -->
         <script type="text/javascript" src="script.js"></script>
     </body>
