--- a/jsnack4/index.html
+++ b/jsnack4/index.html
@@ -10,7 +10,7 @@
          <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
          
          <!-- link al css -->
-        <link rel="stylesheet" href="style/style.css">
+        <link rel="stylesheet" href="style.css">
 
         <!-- FONT AWESOME 6.4.0 -->
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -20,7 +20,10 @@
     </head>
 
     <body>
-        
+        <main>
+            <h1 class="text-center mb-4">Your numbers sum</h1>
+            <p class="text-center fw-bold"></p>
+        </main>
         <!-- JS  -->
         <script type="text/javascript" src="script.js"></script>
     </body>
